# hse-sdt-lab

./: .gitignore  QA.ipynb  README.md  UnitTest.py  dataset.py  lab3.md  main.py  pyproject.toml  qa_model.py  report.md  runner.py
api/: router.py
html/: annotated.html  classdataset_1_1Dataset-members.html  classdataset_1_1Dataset.html  classdataset_1_1DefaultDataset-members.html  classdataset_1_1DefaultDataset.html  classdataset_1_1_dataset-members.html  classdataset_1_1_dataset.html  classdataset_1_1_default_dataset-members.html  classdataset_1_1_default_dataset.html  classes.html  classqa__model_1_1BaseQAModel-members.html  classqa__model_1_1BaseQAModel.html  classqa__model_1_1DefaultQAModel-members.html  classqa__model_1_1DefaultQAModel.html  classqa__model_1_1_base_q_a_model-members.html  classqa__model_1_1_base_q_a_model.html  classqa__model_1_1_default_q_a_model-members.html  classqa__model_1_1_default_q_a_model.html  classrunner_1_1Runner-members.html  classrunner_1_1Runner.html  classrunner_1_1_runner-members.html  classrunner_1_1_runner.html  doxygen_crawl.html  functions.html  functions_func.html  hierarchy.html  md_README.html  md__r_e_a_d_m_e.html  pages.html
latex/: annotated.tex  classdataset_1_1Dataset.eps  classdataset_1_1Dataset.tex  classdataset_1_1DefaultDataset.tex  classdataset_1_1_dataset.tex  classdataset_1_1_default_dataset.eps  classdataset_1_1_default_dataset.tex  classqa__model_1_1BaseQAModel.eps  classqa__model_1_1BaseQAModel.tex  classqa__model_1_1DefaultQAModel.eps  classqa__model_1_1DefaultQAModel.tex  classrunner_1_1Runner.tex  (+7 more)
(+25 files in other folders)
