[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
transformers = "^4.46.3"
torch = "^2.5.1"
pylint = "^3.3.1"
isort = "^5.13.2"
radon = "^6.0.1"
